# MandelbrotApp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/GLAD/: glad.c
lib/GLAD/include/glad/: glad.h
res/: fragmentShader.glsl  fragment_shader.glsl  vertex_shader.glsl
res/shaders/: compile.sh  frag.spv  iteration_orbit_trap.frag  iteration_simple.frag  mandelbrot.frag  shading_rainbow.frag
src/: app_utility.cpp  app_utility.h  imgui.cpp  imgui.h  ini_file.cpp  ini_file.h  main.cpp  saved_view.cpp  saved_view.h  shader.cpp  shader.h  utils.cpp
